cmake_minimum_required(VERSION 3.5)
project(example-repo CXX)

add_executable(example00 example-00.cc)
add_executable(example01 example-01.cc)
add_executable(example02 example-02.cc)
add_executable(example03 example-03.cc)
add_executable(example04 example-04.cc)
add_executable(example05 example-05.cc)
add_executable(example06 example-06.cc)
add_executable(example07 example-07.cc)
add_executable(example08 example-08.cc)
add_executable(example09 example-09.cc)

add_executable(example10 example-10.cc)
add_executable(example11 example-11.cc)
add_executable(example12 example-12.cc)
add_executable(example13 example-13.cc)
add_executable(example14 example-14.cc)
add_executable(example15 example-15.cc)
add_executable(example16 example-16.cc)
add_executable(example17 example-17.cc)
add_executable(example18 example-18.cc)
add_executable(example19 example-19.cc)

add_executable(example20 example-20.cc)
add_executable(example21 example-21.cc)
add_executable(example22 example-22.cc)
add_executable(example23 example-23.cc)
add_executable(example24 example-24.cc)
add_executable(example25 example-25.cc)
add_executable(example26 example-26.cc)
add_executable(example27 example-27.cc)
add_executable(example28 example-28.cc)
add_executable(example29 example-29.cc)

add_executable(example30 example-30.cc)
add_executable(example31 example-31.cc)
add_executable(example32 example-32.cc)
add_executable(example33 example-33.cc)
add_executable(example34 example-34.cc)
add_executable(example35 example-35.cc)
add_executable(example36 example-36.cc)
add_executable(example37 example-37.cc)
add_executable(example38 example-38.cc)
add_executable(example39 example-39.cc)

add_executable(example40 example-40.cc)
add_executable(example41 example-41.cc)
add_executable(example42 example-42.cc)
add_executable(example43 example-43.cc)
add_executable(example44 example-44.cc)
add_executable(example45 example-45.cc)
add_executable(example46 example-46.cc)
add_executable(example47 example-47.cc)
add_executable(example48 example-48.cc)
add_executable(example49 example-49.cc)
